--- a/MijnSocialPlan/MijnSocialPlan/Content/Site.css
+++ b/MijnSocialPlan/MijnSocialPlan/Content/Site.css
@@ -13,7 +13,7 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    /*max-width: 280px;*/
 }
 
 /* styles for validation helpers */
@@ -41,14 +41,53 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
-.inline-inputs {
+.inline {
     display: inline-block;
 }
 
-.block-inputs {
+.block {
     display: block;
 }
 
 .nogeenknop {
     margin-top: 5px;
+}
+
+.eenderde {
+    width: 33%;
+}
+
+.half {
+    width: 49%;
+}
+
+.tweederde {
+    width: 66%;
+}
+
+.vol {
+    width: 100%;
+}
+
+.corespathsbox input {
+    margin-bottom: 3px;
+}
+
+.forwardarrow {
+    background: no-repeat url('forward.png');
+    width: 60px;
+    min-height: 46px;
+}
+
+input[type="text"] {
+       margin-bottom: 3px;
+}
+
+.contentUitwerking  {
+    margin-bottom: 30px;
+}
+
+#removeContentItemSure {
+    display: none;
+    margin-top: 100px;
 }
