--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/socialplanforms")
     @RenderSection("scripts", required: false)
