--- a/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/SocialPlannenMenu.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/SocialPlannenMenu.cshtml
@@ -1,1 +1,13 @@
-﻿Menu
+﻿@model List<MijnSocialPlan.Models.SocialPlan>
+
+@if(Model.Count > 0) {
+    foreach (var item in Model)
+    {
+        <li><a href="#">@Html.DisplayFor(modelItem => item.Title)</a></li>
+    }
+}
+else
+{
+    <li></li>
+}
+
