--- a/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/Create.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/Create.cshtml
@@ -79,7 +79,7 @@
                 </div>
                 <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
             </div>
-            <br/>
+            <br />
             <div id="urlRow" class="urlRow form-group">
                 <label for="inputUrl" class="col-lg-2 control-label">URL</label>
                 <div class="col-lg-6">
@@ -285,94 +285,124 @@
             </div>
         </div>
         <div class="tab-pane fade" id="content">
-            <h3>Content</h3>
+            <h3>Content per social media kanaal</h3>
             <br />
-            <div class="col-lg-12">
-                <h4>Cores & paths</h4>
-            </div>
-            <br />
-            <div id="padnaarbinnenbox" class="corespathsbox col-lg-3 inline">
-                <input type="text" class="form-control inline" id="inputPadnaarbinnen" name="socialplan[kanalen][][padennaarbinnen][]" placeholder="pad naar binnen...">
-                
-                <button type="button" class="vol btn btn-primary btn-md" onclick="plusPadNaarBinnen(this);">
-                    <span class="glyphicon glyphicon-plus inline"></span> Pad naar binnen
-                </button>
-            </div>
-            <div class="forwardarrow col-lg-1">
-            </div>
-            <div id="contentbox" class="corespathsbox col-lg-3 inline">
-                <input type="text" class="form-control inline" id="inputContent-1" name="socialplan[kanalen][][contentitems][][titel]" placeholder="content..." onblur="contentItemIngevuld(this);">
-                <button type="button" class="vol btn btn-primary btn-md" onclick="plusContent(this);">
-                    <span class="glyphicon glyphicon-plus inline"></span> Content
-                </button>
-            </div>
-            <div class="forwardarrow col-lg-1">
-                
-            </div>
-            <div id="padnaarbuitenbox" class="corespathsbox col-lg-3 inline">
-                <input type="text" class="form-control inline" id="inputPadnaarbinnen" name="socialplan[kanalen][][padennaarbuiten][]" placeholder="pad naar buiten...">
-                <button type="button" class="vol btn btn-primary btn-md" onclick="plusPadNaarBuiten(this);">
-                    <span class="glyphicon glyphicon-plus inline"></span> Pad naar buiten
-                </button>
-            </div>
-            &nbsp;
-            <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
-            
-            <div class="col-lg-12 block" style="clear: both; height: 50px;"></div>
+            <div id="kanaalContentPanelContainer">
+                <div id="kanaalContentPanel-1" class="kanaalContentPanel panel panel-default">
+                    <div class="panel-heading" onclick="toggleKanaalPanel(1);">
+                        <span class="glyphicon glyphicon-chevron-down" style="float: left; margin-right: 10px; cursor: pointer;"></span>
+                        <h3 class="panel-title" style="float:left;">Nieuw kanaal</h3>
+                        <div style="clear: both;"></div>
+                    </div>
+                    <div class="panel-body">
 
-            <br />
-            <div id="contentUitwerking-1" class="contentUitwerking col-lg-12" style="display: none;">
-                <h4 class="contentTitel">Content titel</h4>
-                <div class="form-group">
-                    <label for="selectSoortpost" class="col-lg-2">Soort post</label>
-                    <div class="col-lg-4">
-                        <select class="form-control" id="selectSoortpost">
-                            <option>Humor</option>
-                            <option>Informatief</option>
-                            <option>Winactie</option>
-                        </select>
-                    </div>
-                    &nbsp;
-                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
-                </div>
-                <br />
-                <div class="form-group">
-                    <label for="checkboxOnderdelen" class="col-lg-2">Onderdelen</label>
-                    <div class="col-lg-1">
-                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Video <br />
-                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Foto <br />
-                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Tekst
-                    </div>
-                    &nbsp;
-                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
-                </div>
-                <br />
-                <div class="form-group">
-                    <label for="radioShareablelikable" class="col-lg-2">Likable/Shareble</label>
-                    <div class="col-lg-1">
+                        <div class="form-group">
+                            <label for="inputKanaalTitel" class="col-lg-2 control-label">Social media kanaal</label>
+                            <div class="col-lg-4">
+                                <input type="text" onblur="kanaalTitelIngevuld(this);" class="form-control" id="inputKanaalTitel" placeholder="bijv. Facebook of Twitter">
+                            </div>
+                            <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+                        </div>
 
-                        <input type="radio" name="radioShareablelikable" /> Like <br />
-                        <input type="radio" name="radioShareablelikable" /> Share
+                        <div class="kanaalContentContainer" style="display: none">
+                            <div class="col-lg-12">
+                                <h4>Cores & paths</h4>
+                            </div>
+                            <br />
+                            <div id="padnaarbinnenbox" class="corespathsbox col-lg-3 inline">
+                                <input type="text" class="form-control inline" id="inputPadnaarbinnen" name="socialplan[kanalen][][padennaarbinnen][]" placeholder="pad naar binnen...">
+
+                                <button type="button" class="vol btn btn-primary btn-md" onclick="plusPadNaarBinnen(this);">
+                                    <span class="glyphicon glyphicon-plus inline"></span> Pad naar binnen
+                                </button>
+                            </div>
+                            <div class="forwardarrow col-lg-1">
+                            </div>
+                            <div id="contentbox" class="corespathsbox col-lg-3 inline">
+                                <input type="text" class="form-control inline" id="inputContent-1" name="socialplan[kanalen][][contentitems][][titel]" placeholder="content..." onblur="contentItemIngevuld(this);">
+                                <button type="button" class="vol btn btn-primary btn-md" onclick="plusContent(this);">
+                                    <span class="glyphicon glyphicon-plus inline"></span> Content
+                                </button>
+                            </div>
+                            <div class="forwardarrow col-lg-1">
+
+                            </div>
+                            <div id="padnaarbuitenbox" class="corespathsbox col-lg-3 inline">
+                                <input type="text" class="form-control inline" id="inputPadnaarbinnen" name="socialplan[kanalen][][padennaarbuiten][]" placeholder="pad naar buiten...">
+                                <button type="button" class="vol btn btn-primary btn-md" onclick="plusPadNaarBuiten(this);">
+                                    <span class="glyphicon glyphicon-plus inline"></span> Pad naar buiten
+                                </button>
+                            </div>
+                            &nbsp;
+                            <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+
+                            <div class="col-lg-12 block" style="clear: both; height: 50px;"></div>
+
+                            <br />
+                            <div id="contentUitwerking-1-1" class="contentUitwerking col-lg-12" style="display: none;">
+                                <h4 class="contentTitel">Content titel</h4>
+                                <div class="form-group">
+                                    <label for="selectSoortpost" class="col-lg-2">Soort post</label>
+                                    <div class="col-lg-4">
+                                        <select class="form-control" id="selectSoortpost">
+                                            <option>Humor</option>
+                                            <option>Informatief</option>
+                                            <option>Winactie</option>
+                                        </select>
+                                    </div>
+                                    &nbsp;
+                                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+                                </div>
+                                <br />
+                                <div class="form-group">
+                                    <label for="checkboxOnderdelen" class="col-lg-2">Onderdelen</label>
+                                    <div class="col-lg-1">
+                                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Video <br />
+                                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Foto <br />
+                                        <input type="checkbox" name="socialplan[kanalen][][contentitems][][onderdelen]" /> Tekst
+                                    </div>
+                                    &nbsp;
+                                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+                                </div>
+                                <br />
+                                <div class="form-group">
+                                    <label for="radioShareablelikable" class="col-lg-2">Likable/Shareble</label>
+                                    <div class="col-lg-1">
+
+                                        <input type="radio" name="radioShareablelikable" /> Like <br />
+                                        <input type="radio" name="radioShareablelikable" /> Share
+                                    </div>
+                                    &nbsp;
+                                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+                                </div>
+                                <br />
+                                <div id="calltoactionRow" class="calltoactionRow form-group">
+                                    <label for="inputCalltoaction" class="col-lg-2">Call to action</label>
+                                    <div class="col-lg-3">
+                                        <input type="text" class="form-control inline" id="inputCalltoaction" placeholder="action...">
+                                    </div>
+                                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-lg-2">
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <button type="button" class="btn btn-primary btn-md" onclick="plusCallToAction(this);">
+                                            <span class="glyphicon glyphicon-plus"></span> Call to action
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    &nbsp;
-                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
                 </div>
-                <br />
-                <div id="calltoactionRow" class="calltoactionRow form-group">
-                    <label for="inputCalltoaction" class="col-lg-2">Call to action</label>
-                    <div class="col-lg-3">
-                        <input type="text" class="form-control inline" id="inputCalltoaction" placeholder="action...">
-                    </div>
-                    <button type="button" class="infoknop btn btn-default btn-md inline" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-info-sign"></span></button>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-2">
-                    </div>
-                    <div class="col-lg-3">
-                        <button type="button" class="btn btn-primary btn-md" onclick="plusCallToAction(this);">
-                            <span class="glyphicon glyphicon-plus"></span> Call to action
-                        </button>
-                    </div>
+            </div>
+            <br />
+            <div class="form-group">
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-primary btn-md" id="plusKanaal">
+                        <span class="glyphicon glyphicon-plus"></span> Social media kanaal
+                    </button>
                 </div>
             </div>
             <br />
