--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Handleiding.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Handleiding.cshtml
@@ -5,3 +5,8 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+
+<img class="thumbnail col-lg-12" src="~/Content/Images/fb1.png" alt="">
+
+
