--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Handleiding.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Handleiding.cshtml
@@ -6,6 +6,19 @@
 
 <p>Use this area to provide additional information.</p>
 
+<ol>
+    <li>@Html.ActionLink("Link Text", "", "Home")</li>
+    <li>@Html.ActionLink("Link Text", "", "Home")</li>
+    <li>@Html.ActionLink("Link Text", "", "Home")</li>
+    <li>@Html.ActionLink("Link Text", "", "Home")</li>
+    <li>
+        <ul>
+            @Html.ActionLink("Link Text", "", "Home")
+            @Html.ActionLink("Link Text", "", "Home")
+            @Html.ActionLink("Link Text", "", "Home")
+        </ul>
+    </li>
+</ol>
 
 <img class="thumbnail col-lg-12" src="~/Content/Images/fb1.png" alt="">
 
