--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -17,7 +17,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MijnSocialPlan.nl", "Index", "Home", null, new { @class = "navbar-brand" })
+                <!--@Html.ActionLink("MijnSocialPlan.nl", "Index", "Home", null, new { @class = "navbar-brand" })-->
+                <a class="navbar-brand" href="~/">
+                    &nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-thumbs-up"></span>
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -43,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Elyse Teerink</p>
+            <p>&copy; @DateTime.Now.Year - Prototype - Elyse Teerink</p>
         </footer>
     </div>
 
