--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Handleiding", "Handleiding", "Home")</li>
+                    <li>@Html.ActionLink("Handleiding", "Index", "Handleiding")</li>
                     <li>@Html.ActionLink("Info", "Info", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
