--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
@@ -5,16 +5,22 @@
 </p>
 
 <ul class="list-unstyled">
-    <li><h4>@Html.ActionLink("Pagina X", "PaginaX", "Handleiding")</h4></li>
-    <li><h4>@Html.ActionLink("Link Text", "", "Home")</h4></li>
     <li>
-        <h4>@Html.ActionLink("Link Text", "", "Home")</h4>
+        <h4>@Html.ActionLink("Facebook zakelijk account aanmaken", "FacebookZakelijkAccount", "Handleiding")</h4>
         <ul>
-            <li><h5>@Html.ActionLink("Link Text", "", "Home")</h5></li>
-            <li><h5>@Html.ActionLink("Link Text", "", "Home")</h5></li>
-            <li><h5>@Html.ActionLink("Link Text", "", "Home")</h5></li>
+            <li><h5>@Html.ActionLink("Facebook priveaccount aanmaken", "FacebookPriveAccount", "Handleiding")</h5></li>
         </ul>
     </li>
+    <li><h4>@Html.ActionLink("TwitterZakelijkAccount", "TwitterZakelijkAccount", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("InfoSocialMedia", "InfoSocialMedia", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("HoeWerktFacebook", "HoeWerktFacebook", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("HoeWerktTwitter", "HoeWerktTwitter", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("HulpMetSchrijven", "HulpMetSchrijven", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("TipsEnTricks", "TipsEnTricks", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("PostenOpFacebook", "PostenOpFacebook", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("TweetenOpTwitter", "TweetenOpTwitter", "Handleiding")</h4></li>
+    <li><h4>@Html.ActionLink("SocialContentStrategie", "SocialContentStrategie", "Handleiding")</h4></li>
+    
 </ul>
 
 
