--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
@@ -3,13 +3,13 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Welkom op MijnSocialPlan.nl</h1>
+    <p class="lead">De online plek waar ondernemers meer leren over het zakelijk inzetten van Social Media en een Social/content plan kunnen maken. Enjoy!</p>
 </div>
+
 <div class="row">
     <div class="col-lg-12">
-        <h2>Kopje</h2>
+        <h1>Aan de slag!</h1>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
@@ -17,24 +17,52 @@
         </p>
     </div>
 </div>
+
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-6">
+        <h2>Social accounts</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Ik heb nog geen zakelijke accounts, wil deze wel graag aanmaken en kan wel wat hulp gebruiken.
+            Kies het kanaal*:
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Facebook &raquo;</a>
+            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Twitter &raquo;</a>
+        </p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2>Social strategie</h2>
+        <p>Ik weet genoeg en wil een Socialplan maken.</p>
+        <p><a class="btn btn-default" href="~/SocialPlan/Create"><span class="glyphicon glyphicon-plus"></span> Nieuw plan maken</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h2>Hoe werkt het?</h2>
+        <p>De zakelijke Social Media accounts heb ik al, maar ik kan nog wel wat informatie gebruiken.</p>
+        <p>
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Kort maar krachtig: wat kan je met Social Media?</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Hoe werkt Facebook?</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Hoe werkt Twitter?</a>
+        </p>
+    </div>
+    <div class="col-md-6">
+        <h2>Social content</h2>
+        <p>
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Help! Ik ben niet zo goed in schrijven.</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Posts, Tweets… Tips & Tricks!</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Posten op Facebook</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Tweeten op Twitter</a><br />
+            <a class="" href="http://go.microsoft.com/fwlink/?LinkId=301866">Social/content strategie, wat is dat?</a>
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12 home-sterretje">
+        <p>
+            *Momenteel bevat het informatieve deel van deze website alleen informatie over Facebook en Twitter. Het zelf in te vullen plan (de contentstrategie) is te gebruiken voor elk gewenst Social Media kanaal.
+        </p>
     </div>
 </div>
