--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="row">
+﻿<div class="row tekst-groot">
     <div class="col-lg-10">
         <h2>Twitter zakelijk account aanmaken</h2>
 
@@ -42,7 +42,7 @@
         <h4>Gebruikersnaam</h4>
 
         <p>Gebruik hier de bedrijfsnaam. De gebruikersnaam is maximaal 15 tekens lang, mag alleen cijfers, letters of een underscore bevatten en geen spaties. Naast het invulveld voor de gebruikersnaam zie je of de door jou gekozen naam goed en beschikbaar is.</p>
-    
+
         <p>
             <img class="thumbnail" src="~/Content/Images/twitter_gebruikersnaam.png" alt="">
         </p>
@@ -70,7 +70,7 @@
         <h4>Stap 2. Bouw je tijdlijn op</h4>
 
         <p>
-            Hier kan (Twitter geeft geen mogelijkheid om het over te slaan, dus eigenlijk moet je) andere Twitteraars volgen. Tip: vul in het veld ‘Zoeken naar...’ vijf Twitteraars in die iets met jouw bedrijf te maken hebben. Denk hierbij aan zakenrelaties, of websites die gerelateerd zijn aan jouw bedrijf en actief zijn op Twitter. 
+            Hier kan (Twitter geeft geen mogelijkheid om het over te slaan, dus eigenlijk moet je) andere Twitteraars volgen. Tip: vul in het veld ‘Zoeken naar...’ vijf Twitteraars in die iets met jouw bedrijf te maken hebben. Denk hierbij aan zakenrelaties, of websites die gerelateerd zijn aan jouw bedrijf en actief zijn op Twitter.
         </p>
 
         <p>
@@ -136,7 +136,7 @@
         </p>
 
         <p>
-            Op deze pagina kan je informatie toevoegen of wijzigen. Twitter geeft zelf duidelijke aanwijzingen over de velden. Neem de tijd om alles door te nemen en wijzigingen of toevoegingen aan te brengen. Er staan echt veel handige en leuke opties tussen! 
+            Op deze pagina kan je informatie toevoegen of wijzigen. Twitter geeft zelf duidelijke aanwijzingen over de velden. Neem de tijd om alles door te nemen en wijzigingen of toevoegingen aan te brengen. Er staan echt veel handige en leuke opties tussen!
         </p>
 
         <p>
