--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Handleiding", "Index", "Handleiding")</li>
-                    <li>@Html.ActionLink("Info", "Info", "Home")</li>
+                    <li>@Html.ActionLink("Info", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
