--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="row">
+﻿<div class="row tekst-groot">
     <div class="col-lg-10">
         <h2>Facebook zakelijk account aanmaken</h2>
 
