--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
@@ -1,11 +1,11 @@
-﻿<div class="row">
+﻿<div class="row tekst-groot">
     <div class="col-lg-10">
         <h2>Titel</h2>
 
         <h3>kopje</h3>
 
         <p>
-            tekst <a href="http://www.facebook.com/">linkje</a> 
+            tekst <a href="http://www.facebook.com/">linkje</a>
         </p>
 
         <p>
